@@ -5,6 +5,8 @@
 07-Mar-2002
 ~~~~~~~~~~~
 Fix compile problems with Gtk+-2.0-rc1 (missing X libs and cflags).
+Added stock icons to Options box. The filer now requires Gtk+-2.0.
+Updated Infobox to use new GtkTreeView widget.
 
 05-Mar-2002
 ~~~~~~~~~~~
